--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "fast-two-sms": "^3.0.0",
+    "google-auth-library": "^9.10.0",
+    "google-spreadsheet": "^4.1.2",
+    "googleapis": "^140.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "node-geocoder": "^4.3.0",
     "nodemon": "^3.1.2",
     "otp-generator": "^4.0.1",
+    "otpless-node-js-auth-sdk": "^1.0.8",
     "slot-generator": "^1.0.7"
   }
 }
