--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,26 @@
-name: Deploy to AWS EC2
+name: Deploy to EC2
 
 on:
   push:
     branches:
-      - main  # Replace with your branch name if different
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Install SSH Client
-      run: sudo apt-get install openssh-client
+      - name: Install SSH client
+        run: sudo apt-get update && sudo apt-get install -y openssh-client
 
-    - name: Run Commands on AWS EC2
-      uses: appleboy/ssh-action@v0.1.8
-      with:
-        host: 3.110.185.2
-        username: ubuntu
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          mkdir yay
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          password: ${{ secrets.EC2_PASSWORD }}
+          script: |
+            mkdir yay
