--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y openssh-client
 
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.8
+        uses: appleboy/ssh-action@master
         with:
           host: 3.110.185.2
           username: ubuntu
-          password: admin@123
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             mkdir yay
