--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           host: 3.110.185.2
           username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          password: admin@123
           script: |
             mkdir yay
