--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           host: 3.110.185.2
           username: ubuntu
-          password: admin@123
+          key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: mkdir yay
