--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.600.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -26,6 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-geocoder": "^4.3.0",
     "nodemon": "^3.1.2",
     "otp-generator": "^4.0.1",
