--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "fast-two-sms": "^3.0.0",
+    "firebase-admin": "^12.2.0",
     "google-auth-library": "^9.10.0",
     "google-spreadsheet": "^4.1.2",
     "googleapis": "^140.0.0",
