--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.4.0",
     "fast-two-sms": "^3.0.0",
     "firebase": "^10.12.4",
     "firebase-admin": "^12.2.0",
