--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
-    "axios": "^1.7.2",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -37,6 +37,7 @@
     "nodemon": "^3.1.2",
     "otp-generator": "^4.0.1",
     "otpless-node-js-auth-sdk": "^1.0.8",
+    "paytmchecksum": "^1.5.1",
     "slot-generator": "^1.0.7"
   }
 }
