--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
     "axios": "^1.9.0",
+    "baileys": "^6.7.17",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -39,6 +40,8 @@
     "otp-generator": "^4.0.1",
     "otpless-node-js-auth-sdk": "^1.0.8",
     "paytmchecksum": "^1.5.1",
+    "pino": "^8.21.0",
+    "qrcode-terminal": "^0.12.0",
     "razorpay": "^2.9.6",
     "slot-generator": "^1.0.7"
   }
