--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
+    "@azure/storage-blob": "^12.28.0",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
